# beva-daat

./: .gitignore  ActiveNode.cpp  Beva.cpp  Beva.h  C.h  CMakeLists.txt  EditDistance.cpp  EditDistance.h  EditVector.cpp  EditVector.h  EditVectorAutomata.cpp  EditVectorAutomata.h  EditVectorAutomaton.cpp  EditVectorAutomaton.h  Framework.cpp  Framework.h  Node.cpp  Node.h  State.cpp  State.h  Trie.cpp  Trie.h  load_test.sh  main.cpp  path.cfg  readme.md  run.sh  run_job.sh  utils.cpp  utils.h
cpp/: ActiveNode.cpp  Beva.cpp  EditVector.cpp  EditVectorAutomata.cpp  Experiment.cpp  Framework.cpp  Node.cpp  QueryResult.cpp  State.cpp  StaticString.cpp  TopKHeap.cpp  Trie.cpp  utils.cpp
experiments/: all_time_values_data_set_0_size_type_3_tau_3_index_type_bfs_alg_BEVA.txt  all_time_values_data_set_2_size_type_3_tau_3_index_type_bfs_alg_BEVA.txt  indexing_time_data_set_0_size_type_3_tau_3_index_type_bfs_alg_BEVA.txt  indexing_time_data_set_2_size_type_3_tau_3_index_type_bfs_alg_BEVA.txt  number_of_nodes_data_set_0_size_type_3_tau_3_index_type_bfs_alg_BEVA.txt  number_of_nodes_data_set_2_size_type_3_tau_3_index_type_bfs_alg_BEVA.txt  proportion_branch_size_data_set_0_size_type_3_tau_3_index_type_bfs_alg_BEVA.txt  proportion_branch_size_data_set_2_size_type_3_tau_3_index_type_bfs_alg_BEVA.txt  query_processing_time_data_set_0_size_type_3_tau_3_index_type_bfs_alg_BEVA.txt  query_processing_time_data_set_2_size_type_3_tau_3_index_type_bfs_alg_BEVA.txt
header/: ActiveNode.h  Beva.h  C.h  Directives.h  EditVector.h  EditVectorAutomata.h  Experiment.h  Framework.h  Node.h  Trie.h  (+9 more)
(+6 files in other folders)
